# report-tg-bot

./: .env  .env.dist  README.md  docker-compose.yml  pyproject.toml
bot/: alembic.ini  bot.py
bot/callbacks/: callback_user.py  callback_user_profile.py  callback_user_report.py  user_callbacks.py  user_callbacks_profile.py  user_callbacks_report.py
bot/config/: loader.py
bot/filters/: user.py
bot/handlers/: admin_handlers.py  handler_user.py  user_handlers.py
bot/keyboards/: keyboard_utils.py  set_menu.py  user.py
bot/lexicon/: lexicon_ru.py
bot/middlewares/: database.py  user.py
bot/migration/: env.py
bot/migration/versions/: 0c7ea5d19fc0_initial.py  108e8fb1998e_init_users.py  460b51e57c8c_update_user.py  51d8490fe91d_update_user.py  d47da09e827c_initial.py  f712bdb7be8a_add_table_tasks.py
bot/models/: base.py  database.py  user.py
bot/services/: database.py  profile.py  user.py  users.py
bot/states/: user.py
