[tool.poetry]
name = "tg-bot"
version = "0.1.0"
description = ""
authors = ["Tretyak0ff <evgentretyakoff@gmail.com>"]
readme = "README.md"
packages = [{include = "tg_bot"}]

[tool.poetry.dependencies]
aiogram = "v3.0.0b7"
emoji = "^2.5.0"
environs = "^9.5.0"
python = "^3.10"
loguru = "^0.7.0"
aiopg = "^1.4.0"
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
